--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-calendar": "^3.3.1",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-notifications": "^1.7.2",
@@ -35,6 +36,7 @@
     "react-select": "^4.3.1",
     "react-sparkline": "^2.0.0",
     "react-tooltip": "^4.2.17",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
